--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,25 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Daily Journal</title>
+  <title>STHENOS</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="/css/styles.css">
-  <nav class="navbar navbar-default">
+  <nav class="navbar ">
     <div class="container">
       <div class="navbar-header">
         <img class="headimg" src="images/mail (1).png" alt="">
-        <p class="navbar-brand">MY JOURNAL</p>
+        <p class="navbar-brand">Journal</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
-          <!-- 6 -->
           <li id="home"><a href="/">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
-          <li><a href="#sar">JOURNALS</a></li>
-          <li><a href="#contact">CONTACT ME</a></li>
+
+          <li><a href="#contact">CONTACT US</a></li>
         </ul>
     </div>
   </nav>
-
-  <body>
